# openpetstore

./: Cargo.toml  README.md
petstore/: Cargo.toml
petstore-api/: Cargo.toml  README.md
petstore-api/src/: lib.rs  models.rs  types.rs
petstore-api/src/apis/: mod.rs  pet.rs  store.rs  user.rs
petstore-api/src/server/: mod.rs
petstore-server/: Cargo.toml
petstore-server/src/: api.rs  lib.rs  server.rs
petstore-server/src/api/: pet.rs  store.rs  user.rs
petstore/src/: api.rs  main.rs
resources/: openapi.yml
