[package]
name = "petstoreserver"
version = "0.1.0"
edition = "2021"

[dependencies]
petstoreapi = { path="../petstore-api"}
async-trait = "0.1.83"
http = "1.1.0"
axum = "0.7.7"
axum-extra = "0.9.4"
bytes = "1.7.2"
tracing = "0.1.40"
tokio = "1.40.0"
diesel = { version="2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"]}
axum-swagger-ui = "0.3.0"